--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+uploads/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
@@ -151,6 +152,7 @@ yarn-error.log
 ### WebStorm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+
 
 # User-specific stuff
 .idea/
